# neuronumba

./: .gitignore  README.md  pyproject.toml
src/: pyproject.toml
src/neuronumba/basic/: attr.py
src/neuronumba/bold/: __init__.py  base_bold.py  filters.py  stephan_2007.py  stephan_2008.py
src/neuronumba/fitting/EDR/: check_EDR_EDRLR.py  exponential_distance_rule.py
src/neuronumba/fitting/fic/: fic.py
src/neuronumba/fitting/gec/: __init__.py  fitting_gec.py
src/neuronumba/fitting/linear_models/: base_linear.py  hopf_linear.py
src/neuronumba/numba_tools/: __init__.py  addr.py  config.py  functions.py  hdf.py  types.py
src/neuronumba/observables/: __init__.py  accumulators.py  base_observable.py  distance_rule.py  edge_centric_metastability.py  fc.py  fdt.py  fdt_deco2023.py  fdt_off_eq.py  hfreq.py  insideout.py  intrinsic_ignition.py  lagged_cov.py  measures.py  ph_fcd.py  phase_interaction_matrix.py  sw_fcd.py  turbulence.py  turbulence2.py
src/neuronumba/observables/linear/: base_linear.py  linear_fdt_deco2023.py  linearfc.py
src/neuronumba/simulator/: compact_bold_simulator.py  connectivity.py  coupling.py  history.py  monitors.py  noise.py  simulator.py
src/neuronumba/simulator/integrators/: __init__.py  base_integrator.py  euler.py
src/neuronumba/simulator/models/: OrnsteinUhlenbeck.py  __init__.py  deco2014.py  hopf.py  model.py  montbrio.py  naskar2021.py  zerlaut.py
src/neuronumba/simulator/models/dsl/: README.md  ROADMAP.md  (+7 more)
src/neuronumba/tools/: compat_typing.py  filterps.py  filters.py  hdf.py  loader.py  matlab_tricks.py  random.py
(+134 files in other folders)
